@@ -5,7 +5,7 @@
 <body>
 <a href="http://sf.net/project/?group_id=4754"><img src="http://sf.net/sflogo.php?group_id=4754&amp;type=1" align="right" valign="top" width="88" height="31" border="0" alt="SourceForge Logo"></a>
 
-<h1>Tapestry Release 1.0.5
+<h1>Tapestry Release 1.0.6
 
 </h1>
 <p>Tapestry is a component based framework for creating sophisticated web applications.
