@@ -57,7 +57,7 @@ public final class Tapestry
 	 *
 	 */
 	
-	public static final String VERSION = "1.0.5";
+	public static final String VERSION = "1.0.6";
 	
 	/**
 	 *  A {@link Map} that links Locale names (as in {@link Locale#toString()} to
